finished project , added read/sent , real time notfication when user online or when user send message

--- a/Frontend/client/src/app/memeber-profile/memeber-profile.html
+++ b/Frontend/client/src/app/memeber-profile/memeber-profile.html
@@ -2,9 +2,7 @@
   <div class="profile-header">
     <div class="profile-avatar">
       <img [src]="user?.avatar || 'assets/default.jpg'" alt="Profile picture">
-      <span class="status-indicator"
-            [ngClass]="((presence.onlineUsers$ | async) || []).includes(user?.username || '') ? 'online' : 'offline'">
-      </span>
+
     </div>
     <h1>
       {{ user?.username || 'Username' }}
@@ -12,8 +10,16 @@
             *ngIf="((presence.onlineUsers$ | async) || []).includes(user?.username || '')">🟢 Online</span>
       <span class="offline-text"
             *ngIf="!((presence.onlineUsers$ | async) || []).includes(user?.username || '')">⚪ Offline</span>
+
     </h1>
     <h2>{{ user?.title || 'Member' }}</h2>
+
+    <!--Message button-->
+    <button *ngIf="user && user.username !== accountServ.getUsernameFromToken()"
+            class="btn btn-primary"
+            (click)="messageUser(user.username)">
+      Message
+    </button>
   </div>
 
   <div class="profile-content">
